--- a/app/views/appointments/show.html.erb
+++ b/app/views/appointments/show.html.erb
@@ -1,3 +1,3 @@
 <h1>Appointment<h1>
 
-<h2> Your Appointment with: <%= link_to @appointment.doctor, doctor_path(doctor) %> <h2>
+<h2> Your Appointment with: <%= link_to @appointment.doctor, doctor_path(@appointment.doctor) %> <h2>
