--- a/app/views/appointments/show.html.erb
+++ b/app/views/appointments/show.html.erb
@@ -1,3 +1,4 @@
 <h1>Appointment<h1>
 
-<h2> Your Appointment with: <%= link_to @appointment.doctor, doctor_path(@appointment.doctor) %> <h2>
+<h2> <% @user.posts.each do |post| %> <%= link_to post.title, post_path(post) %>
+<% end %><h2>
