--- a/app/views/appointments/show.html.erb
+++ b/app/views/appointments/show.html.erb
@@ -1,4 +1,6 @@
-<h1>Appointment<h1>
+<h1>Appointment</h1>
 
-<h2> <% @user.posts.each do |post| %> <%= link_to post.title, post_path(post) %>
-<% end %><h2>
+<h2> <% @user.posts.each do |post| %>
+<%= link_to post.title, post_path(post) %>
+<% end %> 
+</h2>
