--- a/app/views/appointments/show.html.erb
+++ b/app/views/appointments/show.html.erb
@@ -2,4 +2,4 @@
 
 <h2>Hey <%= link_to @appointment.patient.name, patient_path(@appointment.patient) %> </h2>
 <h2> Your Appointment with: <%= link_to @appointment.doctor.name, doctor_path(@appointment.doctor) %> <h2>
-<h2> Date and Time of Appointment: </h2>
+<h2> Date and Time of Appointment: <%= link_to @appointment.doctor.name, doctor_path(@appointment.doctor) %></h2>
