Automatically backed up by Learn

--- a/app/views/appointments/show.html.erb
+++ b/app/views/appointments/show.html.erb
@@ -1,4 +1,4 @@
-<h1>Appointment<h1>
+<h1>Your Appointment<h1>
 
 <h2>Hey <%= link_to @appointment.patient.name, patient_path(@appointment.patient) %> </h2>
 <h2> Your Appointment with: <%= link_to @appointment.doctor.name, doctor_path(@appointment.doctor) %> <h2>
