Automatically backed up by Learn

--- a/app/views/appointments/show.html.erb
+++ b/app/views/appointments/show.html.erb
@@ -1,3 +1,4 @@
+require 'pry'
 <h1>Your Appointment<h1>
 
 <h2>Hey <%= link_to @appointment.patient.name, patient_path(@appointment.patient) %> </h2>
