--- a/app/views/appointments/show.html.erb
+++ b/app/views/appointments/show.html.erb
@@ -3,4 +3,4 @@
 
 <h2>Hey <%= link_to @appointment.patient.name, patient_path(@appointment.patient) %> </h2> </br>
 <h2> Your Appointment with: <%= link_to @appointment.doctor.name, doctor_path(@appointment.doctor) %> <h2> </br>
-<h2> Date and Time of Appointment: <%= link_to @appointment.appointment_datetime, appointment_path(@appointment.appointment_datetime) %></h2>
+<h2> Date and Time of Appointment: <%= link_to @appointment.appointment_datetime.date_converter, appointment_path(@appointment.appointment_datetime) %></h2>
