Automatically backed up by Learn

--- a/app/views/doctors/show.html.erb
+++ b/app/views/doctors/show.html.erb
@@ -1,2 +1,2 @@
-<h1> Hello <%= @doctor%> </h1>
+<h1> Hello <%=@doctor.name%> </h1>
 <h2>Hey <%= link_to @appointment.patient.name, patient_path(@appointment.patient) %> </h2> </br>
