--- a/app/views/doctors/show.html.erb
+++ b/app/views/doctors/show.html.erb
@@ -1,2 +1,5 @@
 <h1> Hello <%=@doctor.name%> </h1>
-<h2>Hey <%= link_to @appointment.patient.name, patient_path(@appointment.patient) %> </h2> </br>
+
+<% @doctor.appointments.each do |post| %>
+  <%= link_to post.title, post_path(post) %>
+<% end %>
