--- a/app/views/doctors/show.html.erb
+++ b/app/views/doctors/show.html.erb
@@ -1,5 +1,5 @@
 <h1> Hello <%=@doctor.name%> </h1>
 
 <% @doctor.appointments.each do |app| %>
-  <%= link_to post.title, post_path(post) %>
+  <%= link_to app.title, app_path(app) %>
 <% end %>
