--- a/app/views/doctors/show.html.erb
+++ b/app/views/doctors/show.html.erb
@@ -1,5 +1,5 @@
 <h1> Hello <%=@doctor.name%> </h1>
 
 <% @doctor.appointments.each do |app| %>
-  <h3> Appointment Time <%= link_to app.date_converter, app_path(app) %> </h3>
+  <h3> Appointment Date and Time <%= link_to app.date_converter, app_path(app) %> </h3>
 <% end %>
