Automatically backed up by Learn

--- a/app/views/doctors/show.html.erb
+++ b/app/views/doctors/show.html.erb
@@ -2,5 +2,7 @@
 
 <% @doctor.appointments.each do |app| %>
   <h3> Appointment Date and Time: <%= link_to app.date_converter, appointment_path(app) %> </h3>
-  <h3> </h3>
+</br>
+  <h3>With Patient </h3>
+  </br>
 <% end %>
