--- a/app/views/doctors/show.html.erb
+++ b/app/views/doctors/show.html.erb
@@ -3,6 +3,6 @@
 <% @doctor.appointments.each do |app| %>
   <h3> Appointment Date and Time: <%= link_to app.date_converter, appointment_path(app) %> </h3>
 </br>
-  <h3>With Patient: <%= link_to app.patient.name %> </h3>
+  <h3>With Patient: <%= link_to app.patient.name, patient_path(app) %> </h3>
   </br>
 <% end %>
