Automatically backed up by Learn

--- a/app/views/patients/show.html.erb
+++ b/app/views/patients/show.html.erb
@@ -1,1 +1,9 @@
   <h1>All Your Appointments <%= @patient.name%>! </h1>
+
+  <% @patient.appointments.each do |app| %>
+
+  </br>
+
+    </br>
+
+  <% end %>
