--- a/app/views/patients/index.html.erb
+++ b/app/views/patients/index.html.erb
@@ -1,3 +1,8 @@
  <% @patients.each do |x| %>
-<h2> <%= x.name%> </h2>
+ <ul>
+
+<h2> <li> Name: <%= x.name%> Number of Appointments </li>  </h2>
+
+</ul>
+
 <%end %>
